# AndroidDailyTest

./: README.md  build.gradle  gradle.properties  settings.gradle
MatrixMethodParser/: build.gradle  settings.gradle
Performance/: build.gradle  proguard-rules.pro  readme
Performance/src/main/: AndroidManifest.xml
Performance/src/main/cpp/: CMakeLists.txt  allocTracker.cpp  allocTracker.h  native-lib.cpp
Performance/src/main/res/layout/: activity_allocationtracker_main.xml  activity_performance_main.xml  activity_process_track.xml
TestCpp/: build.gradle
TestCpp/src/main/cpp/: CMakeLists.txt  testcpp.cpp
aidlservice/: build.gradle
aidlservice/src/main/: AndroidManifest.xml
aidlservice/src/main/res/values/: themes.xml
app/: build.gradle  com.earthgee.dailytest.jks  proguard-rules.pro  tinker.gradle
app/blacklist/: blackMethodList.txt
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_aidl_client.xml  activity_androidbase_main.xml  activity_binder_client.xml  activity_hotfix_main.xml  activity_hotfix_nuwa.xml  activity_surfaceview.xml  activity_tinker_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
base/: build.gradle
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/res/layout/: activity_camera.xml
camera/src/main/res/layout-land/: activity_camera.xml
gradle/: java-publish.gradle
gradle/wrapper/: gradle-wrapper.properties
java_processor/: build.gradle
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
jetpack/src/main/res/layout/: jetpack_activity_main.xml  jetpack_adapter_moment.xml  jetpack_fragment_detail.xml  jetpack_fragment_editor.xml  jetpack_fragment_list.xml
jetpack/src/main/res/navigation/: nav_graph.xml
jetpackgoogledemo/architecture-samples-views/architecture-samples-views/app/: build.gradle
kotlin/: build.gradle  proguard-rules.pro
kotlin/src/main/: AndroidManifest.xml
lib-common/: build.gradle
lib-ktx/: build.gradle
nuwaref/: build.gradle
nuwaref/src/main/: AndroidManifest.xml
simulate_systrace/: build.gradle  proguard-rules.pro  readme
simulate_systrace/src/main/: AndroidManifest.xml
simulate_systrace/src/main/cpp/: ATraceLogger.cpp  CMakeLists.txt  ThreadHook.cpp  socketHook.cpp
systrace_gradle_plugin/: build.gradle  gradle.properties
view/: build.gradle
view/src/main/: AndroidManifest.xml
(+234 files in other folders)
